@@ -45,7 +45,7 @@ class ContingencyTest {
         assertEquals(ContingencyElementType.GENERATOR, elements.get(1).getType());
 
         NetworkModification modification = contingency.toModification();
-        assertTrue(modification instanceof NetworkModificationList);
+        assertInstanceOf(NetworkModificationList.class, modification);
 
         ContingencyElement bbsElement = new BusbarSectionContingency("bbs");
         contingency.addElement(bbsElement);
@@ -71,7 +71,7 @@ class ContingencyTest {
         List<String> expectedValidIds = Arrays.asList("GEN contingency", "NHV1_NHV2_1 contingency");
 
         assertEquals(expectedValidIds,
-                validContingencies.stream().map(Contingency::getId).collect(Collectors.toList()));
+                validContingencies.stream().map(Contingency::getId).toList());
 
         assertEquals(expectedValidIds,
                 ContingencyList.getValidContingencies(Arrays.asList(generatorContingency, generatorInvalidContingency, lineContingency, lineInvalidContingency), network)
