@@ -14,7 +14,6 @@ import org.junit.jupiter.api.Test;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -30,7 +29,7 @@ class LimitViolationTest {
                 .map(v -> LimitViolationHelper.getCountry(v, n))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Test
@@ -62,7 +61,7 @@ class LimitViolationTest {
         List<Double> expectedVoltages = Arrays.asList(380.0, 380.0, 380.0, 380.0, 380.0);
         List<Double> voltages = violations.stream()
                 .map(v -> LimitViolationHelper.getNominalVoltage(v, network))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedVoltages, voltages);
     }
@@ -74,7 +73,7 @@ class LimitViolationTest {
         List<String> expectedVoltageLevelIds = Arrays.asList("VLHV1", "VLHV2", "VLHV1", "VLHV2", "VLHV1");
         List<String> voltages = violations.stream()
                 .map(v -> LimitViolationHelper.getVoltageLevelId(v, network))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(expectedVoltageLevelIds, voltages);
     }
